# vibe_example

./: .gitignore  README-rcode.md  README.md  README_zh.md  Workflow.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-08.jsonl  tmux-hook-2026-04-09.jsonl  tmux-hook-2026-04-10.jsonl  turns-2026-04-08.jsonl  turns-2026-04-09.jsonl  turns-2026-04-10.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
commands/: run.md
docs/superpowers/specs/: 2026-04-03-statistical-analysis-skill-design.md
rcode/: __init__.py  assumptions.py  data_processing.py  questionnaire_processing.py  reporting.py  setup.py  super_analyze.py  utils.py  visualization.py
scripts/: super_analyze.py
skills/statistical-analysis/: SKILL.md
skills/super-analysis/: SKILL.md
tests/: test_super_analyze.py
text_dataset/: Nasa_tlx.xlsx  ipq.csv  nasa_tlx_.csv  nmmsp.csv  ssq.csv  time.csv
