[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcode"
version = "0.1.0"
description = "Enhanced Python Functions for Statistical Analysis and APA-Compliant Reporting"
readme = "README-rcode.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mark Colley", email = "mark.colley@yahoo.de"},
]
keywords = ["statistics", "apa", "anova", "visualization", "reporting", "latex"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "pingouin>=0.5",
    "scikit-posthocs>=0.8",
    "pyperclip>=1.8",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
pareto = [
    "pygmo>=2.19",
]

[project.urls]
Homepage = "https://github.com/M-Colley/rCode"
Issues = "https://github.com/M-Colley/rCode/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["rcode*"]
